--- a/bbs/index.html
+++ b/bbs/index.html
@@ -36,29 +36,8 @@
   <div>
     <ul class="nav navbar-nav">
       <li><a href="new%20subject.html">New Subject</a></li>
-      <li><a href="#">link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          dropdown
-          <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li class="divider"></li>
-          <li><a href="#">分离的链接</a></li>
-          <li class="divider"></li>
-          <li><a href="#">另一个分离的链接</a></li>
-        </ul>
-      </li>
+      <li><a href="emerge.html">Emerge</a></li>
     </ul>
-  </div>
-    <form class="navbar-form navbar-right" role="search">
-      <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-default" type="submit">Search</button>
-    </form>
-  </div>
 </nav>
 
 <div class="container" id="post">
